# learn-ocaml-workshop

./: .gitignore  README.org
02-exercises/: dune  jbuild
02-exercises/01-introduction/: dune  jbuild  problem.ml
02-exercises/02-arithmetic/: clamp.ml  dune  float_clamp.ml  jbuild
02-exercises/03-lists/: dune  jbuild  problem.ml
02-exercises/05-list_range/: dune  problem.ml
02-exercises/06-list_product/: dune
02-exercises/07-sum_product/: dune
02-exercises/08-list_min/: dune
02-exercises/09-largest_smallest/: dune
02-exercises/09-list_range/: dune
02-exercises/11-sum_product/: dune
02-exercises/11-tuples/: dune
02-exercises/12-labelled_arguments/: dune
02-exercises/15-tuples/: dune
02-exercises/16-labelled_arguments/: dune
02-exercises/16-reading_sigs/: dune
02-exercises/20-reading_sigs/: dune
02-exercises/22-records/: dune
02-exercises/23-mutable_records/: dune
02-exercises/24-refs/: dune
03-frogger/: Makefile  README.org  dune
03-frogger/test-js-of-ocaml-install/: dune
04-bigger-projects/fuzzy-finder/: README.org
04-bigger-projects/fuzzy-finder/01-simple/: dune  main.ml
04-bigger-projects/fuzzy-finder/02-functional/: README.org
04-bigger-projects/fuzzy-finder/03-incremental/: README.org
04-bigger-projects/fuzzy-finder/functional/: fuzzy.ml  fuzzy.mli  import.ml  main.ml
04-bigger-projects/fuzzy-finder/incremental/: fuzzy.ml  fuzzy.mli  import.ml  jbuild  main.ml
04-bigger-projects/fuzzy-finder/simple/: jbuild
sandbox/test/: jbuild  test.ml
solutions/irc-bot/: Makefile
solutions/irc-bot/lib/: dune
(+37 files in other folders)
