;; -*- scheme -*-

(alias
  (name DEFAULT) 
  (deps 
   (alias_rec 01-introduction/runtest)
   (alias_rec 02-arithmetic/runtest)
   (alias_rec 03-lists/runtest)
   (alias_rec 04-simple_recursion/runtest)
   (alias_rec 05-list_range/runtest)
   (alias_rec 06-list_product/runtest)
   (alias_rec 07-sum_product/runtest)
   (alias_rec 08-list_min/runtest)
   (alias_rec 09-largest_smallest/runtest)
   (alias_rec 10-variants/runtest)
   (alias_rec 11-tuples/runtest)
   (alias_rec 12-labelled_arguments/runtest)
   (alias_rec 13-options/runtest)
   (alias_rec 14-anonymous_functions/runtest)
   (alias_rec 15-list_operations/runtest)
   (alias_rec 16-reading_sigs/runtest)
   (alias_rec 17-writing_list_operations/runtest)
   (alias_rec 18-records/runtest)
   (alias_rec 19-mutable_records/runtest)
   (alias_rec 20-refs/runtest)))
